overflow fix?

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
     width: 30%;
     height: 120px;
     float: left;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .invertedText{
@@ -107,7 +107,7 @@ a.invisibleLink:hover{
     float: right;
     width: 50%;
     height: auto;
-    overflow: scroll;
+    overflow: hidden;
     text-align: left;
     margin-top: 20%;
     background: black;
