--- a/stylesheets/styleinvert.css
+++ b/stylesheets/styleinvert.css
@@ -26,7 +26,7 @@ header{
     width: 30%;
     height: 120px;
     float: left;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .invertedText{
@@ -112,7 +112,7 @@ a.invisibleLink:hover{
     float: right;
     width: 50%;
     height: auto;
-    overflow: scroll;
+    overflow: hidden;
     text-align: left;
     margin-top: 20%;
     background: black;
